Added JS integration

--- a/order.html
+++ b/order.html
@@ -56,7 +56,7 @@
                     <h2>Choose your crust</h2>
 
                     <div class="form-group">
-                        <select name="crust-choice" class="form-control" onclick="toggleField('pizza-size-container');">
+                        <select name="crust-choice" id="crust-choice" class="form-control pizza-updater">
                             <option disabled selected>Select a crust...</option>
                             <option value="thin">Thin</option>
                             <option value="deep">Deep Dish</option>
@@ -84,7 +84,7 @@
                     </div-->
 
                     <div class="form-group">
-                        <select name="pizza-size" class="form-control">
+                        <select name="pizza-size" id="pizza-size" class="form-control pizza-updater">
                             <option disabled selected>Select a size...</option>
                             <option value="sm">Small</option>
                             <option value="md">Medium</option>
@@ -97,82 +97,82 @@
 
 
             <div class="row">
-                <section class="col-md-4 hidden" id="toppings-meat-container">
+                <section class="col-md-4 hidden toppings-container" id="toppings-meat-container">
                     <h2>Choose your meat toppings</h2>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="pepperoni" class="form-check-input"> Pepperoni
+                            <input type="checkbox" name="toppings[]" value="pepperoni" data-pizza-field-name="toppingsMeat" class="form-check-input pizza-updater"> Pepperoni
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="sausage" class="form-check-input"> Sausage
+                            <input type="checkbox" name="topping[]" value="sausage" class="form-check-input pizza-updater"> Sausage
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="bacon" class="form-check-input"> Bacon
+                            <input type="checkbox" name="topping[]" value="bacon" class="form-check-input pizza-updater"> Bacon
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="chicken" class="form-check-input"> Chicken
+                            <input type="checkbox" name="topping[]" value="chicken" class="form-check-input pizza-updater"> Chicken
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="meat-lover" class="form-check-input"> Combo (Meat Lover's)
+                            <input type="checkbox" name="topping[]" value="meat-lover" class="form-check-input pizza-updater"> Combo (Meat Lover's)
                         </label>
                     </div>
                 </section>
 
-                <section class="col-md-4 offset-md-2 hidden" id="toppings-other-container">
+                <section class="col-md-4 offset-md-2 hidden toppings-container" id="toppings-other-container">
                     <h2>Choose your other toppings</h2>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="peppers-banana" class="form-check-input"> Banana Peppers
+                            <input type="checkbox" name="topping[]" value="peppers-banana" class="form-check-input pizza-updater"> Banana Peppers
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="spinach" class="form-check-input"> Spinach
+                            <input type="checkbox" name="topping[]" value="spinach" class="form-check-input pizza-updater"> Spinach
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="olives-black" class="form-check-input"> Black Olives
+                            <input type="checkbox" name="topping[]" value="olives-black" class="form-check-input pizza-updater"> Black Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="olives-green" class="form-check-input"> Green Olives
+                            <input type="checkbox" name="topping[]" value="olives-green" class="form-check-input pizza-updater"> Green Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="mushrooms" class="form-check-input"> Mushrooms
+                            <input type="checkbox" name="topping[]" value="mushrooms" class="form-check-input pizza-updater"> Mushrooms
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="onions" class="form-check-input"> Onions
+                            <input type="checkbox" name="topping[]" value="onions" class="form-check-input pizza-updater"> Onions
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="peppers-green" class="form-check-input"> Green Peppers
+                            <input type="checkbox" name="topping[]" value="peppers-green" class="form-check-input pizza-updater"> Green Peppers
                         </label>
                     </div>
                 </section>
