--- a/order.html
+++ b/order.html
@@ -56,7 +56,7 @@
                     <h2>Choose your crust</h2>
 
                     <div class="form-group">
-                        <select name="crust-choice" id="crust-choice" class="form-control pizza-updater">
+                        <select name="crustChoice" id="crust-choice" class="form-control pizza-updater">
                             <option disabled selected>Select a crust...</option>
                             <option value="thin">Thin</option>
                             <option value="deep">Deep Dish</option>
@@ -84,7 +84,7 @@
                     </div-->
 
                     <div class="form-group">
-                        <select name="pizza-size" id="pizza-size" class="form-control pizza-updater">
+                        <select name="pizzaSize" id="pizza-size" class="form-control pizza-updater">
                             <option disabled selected>Select a size...</option>
                             <option value="sm">Small</option>
                             <option value="md">Medium</option>
@@ -102,31 +102,31 @@
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppings[]" value="pepperoni" data-pizza-field-name="toppingsMeat" class="form-check-input pizza-updater"> Pepperoni
+                            <input type="checkbox" name="toppingsMeat" value="pepperoni" data-pizza-field-name="toppingsMeat" class="form-check-input pizza-updater"> Pepperoni
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="sausage" class="form-check-input pizza-updater"> Sausage
+                            <input type="checkbox" name="toppingsMeat" value="sausage" class="form-check-input pizza-updater"> Sausage
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="bacon" class="form-check-input pizza-updater"> Bacon
+                            <input type="checkbox" name="toppingsMeat" value="bacon" class="form-check-input pizza-updater"> Bacon
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="chicken" class="form-check-input pizza-updater"> Chicken
+                            <input type="checkbox" name="toppingsMeat" value="chicken" class="form-check-input pizza-updater"> Chicken
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="meat-lover" class="form-check-input pizza-updater"> Combo (Meat Lover's)
+                            <input type="checkbox" name="toppingsMeat" value="meat-lover" class="form-check-input pizza-updater"> Combo (Meat Lover's)
                         </label>
                     </div>
                 </section>
@@ -136,43 +136,43 @@
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="peppers-banana" class="form-check-input pizza-updater"> Banana Peppers
+                            <input type="checkbox" name="toppingsMisc" value="peppers-banana" class="form-check-input pizza-updater"> Banana Peppers
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="spinach" class="form-check-input pizza-updater"> Spinach
+                            <input type="checkbox" name="toppingsMisc" value="spinach" class="form-check-input pizza-updater"> Spinach
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="olives-black" class="form-check-input pizza-updater"> Black Olives
+                            <input type="checkbox" name="toppingsMisc" value="olives-black" class="form-check-input pizza-updater"> Black Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="olives-green" class="form-check-input pizza-updater"> Green Olives
+                            <input type="checkbox" name="toppingsMisc" value="olives-green" class="form-check-input pizza-updater"> Green Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="mushrooms" class="form-check-input pizza-updater"> Mushrooms
+                            <input type="checkbox" name="toppingsMisc" value="mushrooms" class="form-check-input pizza-updater"> Mushrooms
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="onions" class="form-check-input pizza-updater"> Onions
+                            <input type="checkbox" name="toppingsMisc" value="onions" class="form-check-input pizza-updater"> Onions
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="topping[]" value="peppers-green" class="form-check-input pizza-updater"> Green Peppers
+                            <input type="checkbox" name="toppingsMisc" value="peppers-green" class="form-check-input pizza-updater"> Green Peppers
                         </label>
                     </div>
                 </section>
