finished update order on reload....arrghhhhh

--- a/order.html
+++ b/order.html
@@ -58,8 +58,8 @@
                     <div class="form-group">
                         <select name="crustChoice" id="crust-choice" class="form-control pizza-updater">
                             <option disabled selected>Select a crust...</option>
-                            <option value="thin">Thin</option>
-                            <option value="deep">Deep Dish</option>
+                            <option class="thin-crust" value="thin">Thin</option>
+                            <option class="deep-dish" value="deep">Deep Dish</option>
                         </select>
                     </div>
                 </section>
@@ -102,31 +102,31 @@
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMeat" value="pepperoni" data-pizza-field-name="toppingsMeat" class="form-check-input pizza-updater"> Pepperoni
+                            <input type="checkbox" name="toppingsMeat" value="pepperoni" data-pizza-field-name="toppingsMeat" class="form-check-input pizza-updater" id="pepperoni"> Pepperoni
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMeat" value="sausage" class="form-check-input pizza-updater"> Sausage
+                            <input type="checkbox" name="toppingsMeat" value="sausage" class="form-check-input pizza-updater" id="sausage"> Sausage
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMeat" value="bacon" class="form-check-input pizza-updater"> Bacon
+                            <input type="checkbox" name="toppingsMeat" value="bacon" class="form-check-input pizza-updater" id="bacon"> Bacon
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMeat" value="chicken" class="form-check-input pizza-updater"> Chicken
+                            <input type="checkbox" name="toppingsMeat" value="chicken" class="form-check-input pizza-updater" id="chicken"> Chicken
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMeat" value="meat-lover" class="form-check-input pizza-updater"> Combo (Meat Lover's)
+                            <input type="checkbox" name="toppingsMeat" value="meat-lover" class="form-check-input pizza-updater" id="meat-lover"> Combo (Meat Lover's)
                         </label>
                     </div>
                 </section>
@@ -136,43 +136,43 @@
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="peppers-banana" class="form-check-input pizza-updater"> Banana Peppers
+                            <input type="checkbox" name="toppingsMisc" value="peppers-banana" class="form-check-input pizza-updater" id="peppers-banana"> Banana Peppers
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="spinach" class="form-check-input pizza-updater"> Spinach
+                            <input type="checkbox" name="toppingsMisc" value="spinach" class="form-check-input pizza-updater" id="spinach"> Spinach
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="olives-black" class="form-check-input pizza-updater"> Black Olives
+                            <input type="checkbox" name="toppingsMisc" value="olives-black" class="form-check-input pizza-updater" id="olives-black"> Black Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="olives-green" class="form-check-input pizza-updater"> Green Olives
+                            <input type="checkbox" name="toppingsMisc" value="olives-green" class="form-check-input pizza-updater" id="olives-green"> Green Olives
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="mushrooms" class="form-check-input pizza-updater"> Mushrooms
+                            <input type="checkbox" name="toppingsMisc" value="mushrooms" class="form-check-input pizza-updater" id="mushrooms"> Mushrooms
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="onions" class="form-check-input pizza-updater"> Onions
+                            <input type="checkbox" name="toppingsMisc" value="onions" class="form-check-input pizza-updater" id="onions"> Onions
                         </label>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="checkbox" name="toppingsMisc" value="peppers-green" class="form-check-input pizza-updater"> Green Peppers
+                            <input type="checkbox" name="toppingsMisc" value="peppers-green" class="form-check-input pizza-updater" id="peppers-green"> Green Peppers
                         </label>
                     </div>
                 </section>
