added basic price and a reset button

--- a/order.html
+++ b/order.html
@@ -183,6 +183,17 @@
 
             </div>
 
+            <div class="row">
+                <section class="col-md-4 price-container" id="price-container">
+                    <h4>PRICE: $</h4>
+                </section>
+
+                <section class="col-md-4 offset-md-2 checkout-button" >
+                    <button type="reset" class="reset-button" name="reset-choices">Reset Choices</button>
+                </section>
+                
+            </div>
+
             <hr>
 
         </div> <!-- /container -->
