reset button works, also hidden that section

--- a/order.html
+++ b/order.html
@@ -183,7 +183,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row price-reset-section hidden">
                 <section class="col-md-4 price-container" id="price-container">
                     <h4>PRICE: $</h4>
                 </section>
