added removal of small selection for deep-dish

--- a/order.html
+++ b/order.html
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <select name="pizzaSize" id="pizza-size" class="form-control pizza-updater">
                             <option disabled selected>Select a size...</option>
-                            <option value="sm">Small ($7.99)</option>
+                            <option id="sm" value="sm">Small ($7.99)</option>
                             <option value="md">Medium ($11.99)</option>
                             <option value="lg">Large ($15.99)</option>
                         </select>
