--- a/order.html
+++ b/order.html
@@ -42,6 +42,13 @@
     <form id="order-form">
         <div class="container pad-top-3rem">
 
+            <div class="col-md-10 alert alert-warning alert-dismissible fade show hidden" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            </div>
+
             <!--div class="form-group">
                 <input type="text" class="form-control"
                        name="username" id="username"
