changed alert message

--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                <strong>Deep Dish not available in Small!</strong> Pizza size has been changed to Medium.
             </div>
 
             <!--div class="form-group">
