--- a/order.html
+++ b/order.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet">
 </head>
 
 <body>
