--- a/order.html
+++ b/order.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="order.html">Order Pizza Pi</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="changes.html">Changes</a>
+            </li>
         </ul>
 
     </div>
