moved function to new file

--- a/changes.html
+++ b/changes.html
@@ -49,7 +49,7 @@
             <p>
                 These are the Changes made over Time
             </p>
-            <p><a class="btn btn-primary btn-lg" href="order.html" role="button">Order now &raquo;</a></p>
+            <p><a class="btn btn-primary btn-lg" id="show-table" role="button">Show Changes</a></p>
         </div>
     </div>
 
@@ -99,5 +99,6 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
 <script src="js/vendor/popper.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/changes.js"></script>
 </body>
 </html>
