--- a/order.html
+++ b/order.html
@@ -224,5 +224,6 @@
 <script src="js/vendor/popper.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/order.js"></script>
+<script src="js/changes.js"></script>
 </body>
 </html>
