completed table display

--- a/changes.html
+++ b/changes.html
@@ -54,13 +54,13 @@
     </div>
 
     <div class="container">
-        <table class="table table-hover">
+        <table class="table table-hover" id="myTable">
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Pick</th>
+              <th scope="col">User Pick</th>
               <th scope="col">Price</th>
-              <th scope="col">Toppings</th>
+              <th scope="col">#Toppings</th>
             </tr>
           </thead>
           <tbody>
@@ -100,5 +100,6 @@
 <script src="js/vendor/popper.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/changes.js"></script>
+<script src="js/order.js"></script>
 </body>
 </html>
