--- a/changes.html
+++ b/changes.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
     </div>
 
     <div class="container">
-        <table class="table table-hover" id="myTable">
+        <table class="table table-hover table-dark table-responsive-md" id="myTable">
           <thead>
             <tr>
               <th scope="col">#</th>
