added picture to index and styled

--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
                 <a class="nav-link" href="changes.html">Changes</a>
             </li>
         </ul>
-
     </div>
 </nav>
 
 <main role="main">
-
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron pad-top-zero">
         <div class="container">
+            <img src="pictures/pic-sign.jpg" class="img-fluid col-md-12" style="max-width: 100%" alt="Responsive image">
             <h1 class="display-3">Welcome to Pizza Pi!</h1>
             <p>
                 Our pizza has more flavor and more topping choices than Little Caesar's. You will love it or Little Caesar's
