added picture and 'text' file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <main role="main">
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron pad-top-zero">
+    <div class="jumbotron main-bg">
         <div class="container">
             <img src="pictures/pic-sign.jpg" class="img-fluid col-md-12" style="max-width: 100%" alt="Responsive image">
             <h1 class="display-3">Welcome to Pizza Pi!</h1>
