added color to changes, and bolder fonts

--- a/changes.html
+++ b/changes.html
@@ -44,7 +44,7 @@
 <main role="main">
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron main-bg">
         <div class="container">
             <h1 class="display-3">Welcome to Pizza Pi!</h1>
             <p>
