--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron main-bg">
         <div class="container">
-            <img src="pictures/pic-sign.jpg" class="img-fluid col-md-12" style="max-width: 100%" alt="Responsive image">
+            <img src="pictures/pic-sign.jpg" class="img-fluid col-md-12" id="img-main" style="max-width: 100%" alt="Responsive image">
             <h1 class="display-3">Welcome to Pizza Pi!</h1>
             <p>
                 Our pizza has more flavor and more topping choices than Little Caesar's. You will love it or Little Caesar's
